--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-.env
-*.db
 venv
 __pycache__
 
@@ -27,3 +25,26 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Output
+.output
+.vercel
+.netlify
+.wrangler
+.svelte-kit
+build
+
+# OS
+Thumbs.db
+*.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
